# libUnihan2

./: AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog-db  ChangeLog.in  ChangeLog.prev  Doxyfile  Doxyfile.in  Makefile  NEWS  README  README-db  README.md  RELEASE-NOTES.txt  TODO.md  UploadPkg.batch.in  common.CMakeLists.txt  config.h.in  dbTable.txt  install_manifest.txt  libUnihan-common.CMakeLists.txt  libUnihan.spec  rpmrc
SPECS/: RPM-ChangeLog.prev  UnihanDb.spec  libUnihan.spec  libUnihan.spec.in  project.spec.in
UnihanDb/: CMakeLists.txt  ChangeLog.in  RELEASE-NOTES.txt  UploadPkg.batch.in  cmake_uninstall.cmake.in  common.CMakeLists.txt  dbTable-default.in  libUnihan-common.CMakeLists.txt  rpmmacros  unihan_rebuild_cache.c  unihan_search_db.c
UnihanDb/SPECS/: RPM-RELEASE-NOTES.txt  UnihanDb.spec.in  project.spec.in
cmake_modules/: BasicMacros.cmake
src/: CMakeLists.txt  Makefile  Unihan.c  Unihan.h  Unihan_Phonetic.c  Unihan_Phonetic.h  Unihan_Phonetic_table.c  Unihan_SQL_funcs.c  Unihan_SQL_gen.c  Unihan_ZhuYin.c  Unihan_ZhuYin.h  Unihan_builtin.c  Unihan_builtin.h  Unihan_builtin_def.c  Unihan_def.c  Unihan_enum.h  Unihan_phonetic-private.h  Unihan_phonetic.c  Unihan_phonetic.h  Unihan_phonetic_table.c  Unihan_phonetic_tables.c  Unihan_phonetic_tables.h  Unihan_types.h  allocate.c  allocate.h  collection.c  collection.h  config.h  file_functions.c  file_functions.h  sqlite_functions.c  sqlite_functions.h  str_functions.c  str_functions.h  unihan_converter.c  unihan_query.c  unihan_rebuild_cache.c  unihan_search_db.c  verboseMsg.c  verboseMsg.h
test/: CMakeLists.txt  PinYin_test_always_f.txt  PinYin_test_always_t.txt  PinYin_test_inputMethod_f.txt  PinYin_test_inputMethod_t.txt  PinYin_test_none_f.txt  PinYin_test_none_t.txt  PinYin_test_original_f.txt  PinYin_test_original_t.txt  PinYin_test_trailing_f.txt  PinYin_test_trailing_t.txt  PinYin_test_unihan_f.txt  PinYin_test_unihan_t.txt  ZhuYin_test_always.txt  ZhuYin_test_inputMethod.txt  ZhuYin_test_numerical.txt  ZhuYin_test_original.txt  check_functions.c  check_functions.h  check_phonetic.c  check_str_functions.c  check_toneMark.c  check_unihan_functions.c  phonetic_test_tables.c
www/: Makefile  basic.css  development.html  footnote.js  global.js  index.html  menu.css  menu.js  menuDef.js  multilingual.js  standardTheme.js  usage.html
